--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
-theme: modernist
+remote_theme: pages-themes/modernist@v0.2.0
+plugins:
+  - jekyll-remote-theme
 
+title: Phoebe Farrelly
+description: A personal blog on tech, learning, and cybersecurity
