--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
-remote_theme: pages-themes/modernist@v0.2.0
-plugins:
-  - jekyll-remote-theme
+theme: minima
 
-title: Phoebe Farrelly
-description: A personal blog on tech, learning, and cybersecurity
+# optional extras
+minima:
+  skin: classic
