--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 theme: minima
+title: Phoebe Farrelly
+description: Tech degree apprentice and cyber enthusiast
 
-# optional extras
+
 minima:
   skin: classic
+
