--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 theme: minima
-title: Phoebe Farrelly
+title: ""
 description: Tech degree apprentice and cyber enthusiast
 
 
 minima:
   skin: classic
+
 
