--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 theme: minima
-title: ""
-description: Tech degree apprentice and cyber enthusiast
+title: Phoebe Farrelly
+description: ""
 
 
 minima:
   skin: classic
+
 
 
